[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-atc-ble-oepl"
version = "0.3.0"
description = "Python module for interacting with ATC BLE firmware on OEPL e-paper tags"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]

keywords = []  # TODO: Add relevant keywords
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.5.0",
    "epaper-dithering>=0.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "prek>=0.3.4",
    "rich>=13.0.0",
]

[project.scripts]
atc-ble = "py_atc_ble_oepl.cli:main"

[project.urls]
Homepage = "https://opendisplay.org"
Repository = "https://github.com/OpenDisplay-org/py-atc-ble-oepl"
Documentation = "https://github.com/OpenDisplay-org/py-atc-ble-oepl#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/py_atc_ble_oepl"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "epaper_dithering"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
